# briefly

./: README.md  pyproject.toml
briefly/: business_challenge.py  overview.py  streamlit.py
