[tool.poetry]
name = "briefly"
version = "0.1.0"
description = "For rapid creation of marketing materials"
authors = ["thomfoster <36595849+thomfoster@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.10"
streamlit = "^1.22.0"
openai = "^0.27.6"
watchdog = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
